# tang_nano_9K_ov7670

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  camera_ov7670.gprj
doc/: main_components.drawio  system_structure.drawio
physical/: parts_holder.scad  parts_holder.stl
scripts/: scaler_generator.py
sim/: CMakeLists.txt  buffer_controller_test_read.sv  buffer_controller_test_read_write_1.sv  buffer_controller_test_read_write_2.sv  buffer_controller_test_write.sv  cam_handler_test.sv  debug_pattern_2_test.sv  debug_pattern_test.sv  debug_pattern_test_2.sv  debug_pattern_test_no_extra.sv  download_buffer_test.sv  frame_buffer_test_full_frame_23x17.sv  frame_buffer_test_full_frame_640x480.sv  frame_buffer_test_full_frame_multi_23x17.sv  frame_buffer_test_init0.sv  frame_buffer_test_init16.sv  frame_buffer_test_init16_0.sv  frame_buffer_test_init16_rnd_len.sv  frame_buffer_test_init16_var_len.sv  frame_buffer_test_init_rnd_len.sv  frame_buffer_test_init_var_len.sv  frame_buffer_test_read_frame_23x17.sv  frame_buffer_test_read_frame_23x17_2.sv  frame_buffer_test_read_frame_multi_23x17.sv  frame_buffer_test_read_frame_multi_23x17_2.sv  frame_buffer_test_read_write_frame_23x17.sv  i2c_slave_model.sv  lcd_controller_test.sv  psram_model.sv  run_simulator.bat.in  run_test_baseline.bat  run_test_bench.bat  run_test_frame_buffer_full_frame_23x17.bat  run_test_frame_buffer_full_frame_640x480.bat  run_test_frame_buffer_full_frame_multi_23x17.bat  run_test_frame_buffer_init0.bat  run_test_frame_buffer_init16.bat  run_test_frame_buffer_init16_0.bat  run_test_frame_buffer_init16_rnd_len.bat  run_test_frame_buffer_init16_var_len.bat  (+14 more)
src/: BufferController.sv  CMakeLists.txt  DownloadBuffer.sv  PositionScaler.sv  PositionScaler_horz.sv  PositionScaler_vert.sv  VGA_timing.v  arbiter.v  cam_pixel_processor.sv  cam_settings.mi  camera_control.sdc  camera_control.v  camera_control_defs.vh  camera_handler.sv  camera_ov7670.cst  camera_ov7670.rao  camera_ov7670_2.rao  color_utilities.vh  debug_pattern_generator.sv  debug_pattern_generator2.sv  device_delay.sv  functions.v  i2c_control_fsm.sv  i2c_control_fsm.v  i2c_controller.v  i2c_fsm.hfe  i2c_master.v  i2c_master_bit_ctrl.v  i2c_master_byte_ctrl.v  lcd_controller.sv  ov7670_default.sv  ov7670_regs.vh  psram_test.v  psram_utils.vh  video_controller.sv
src/fifo_hs/: fifo_hs.ipc  (+2 more)
(+97 files in other folders)
